
V2.03 auf V2.04dev
config.countries.php changed to config.countries.yml
config.customer.php changed to config.customer.yml
config.scrts.php changed to config.scrts.yml